Added map file to the debug build.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5703 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.vcproj
+++ b/shareaza/Shareaza.vcproj
@@ -38,6 +38,7 @@
 				UsePrecompiledHeader="3"
 				PrecompiledHeaderThrough="StdAfx.h"
 				PrecompiledHeaderFile="Debug/Shareaza.pch"
+				AssemblerOutput="0"
 				AssemblerListingLocation="Debug/"
 				ObjectFile="Debug/"
 				ProgramDataBaseFileName="Debug/"
@@ -58,6 +59,10 @@
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib;vfw32.lib;Iphlpapi.lib;msi.lib"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="Debug/Shareaza.pdb"
+				GenerateMapFile="TRUE"
+				MapFileName="$(OutDir)/$(ProjectName).map"
+				MapExports="TRUE"
+				MapLines="TRUE"
 				SubSystem="2"
 				TargetMachine="1"/>
 			<Tool
@@ -146,7 +151,9 @@
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="Release/Shareaza.pdb"
 				GenerateMapFile="TRUE"
-				MapFileName="Release/Shareaza.map"
+				MapFileName="$(OutDir)/$(ProjectName).map"
+				MapExports="TRUE"
+				MapLines="TRUE"
 				SubSystem="2"
 				OptimizeReferences="2"
 				SetChecksum="TRUE"
