Removed legacy menu resources, added resource loading by name (was by number only)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5723 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.vcproj
+++ b/shareaza/Shareaza.vcproj
@@ -3614,6 +3614,9 @@
 				RelativePath="Res\Hand.cur">
 			</File>
 			<File
+				RelativePath="Res\Hash.ico">
+			</File>
+			<File
 				RelativePath="Res\HashMismatch.htm">
 			</File>
 			<File
@@ -3671,6 +3674,9 @@
 				RelativePath="Res\Move.cur">
 			</File>
 			<File
+				RelativePath="Res\MusicBrainz.bmp">
+			</File>
+			<File
 				RelativePath="Res\Navbar.bmp">
 			</File>
 			<File
@@ -3716,7 +3722,7 @@
 				RelativePath="Res\Scheduler.bmp">
 			</File>
 			<File
-				RelativePath=".\Res\SchemaMappings.xml">
+				RelativePath="Res\SchemaMappings.xml">
 				<FileConfiguration
 					Name="Debug|Win32">
 					<Tool
