Added display of connection errors to the Graph window
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5727 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4386,6 +4386,7 @@ BEGIN
     IDS_GRAPH_TOTAL_BANDWIDTH_UDP_OUT "Total UDP Transmit Bandwidth"
     IDS_GRAPH_GNUTELLA_PINGS "Gnutella Ratio of Received/Sent Pings"
     IDS_GRAPH_GNUTELLA_PONGS "Gnutella Ratio of Received/Sent Pongs"
+    IDS_GRAPH_CONNECTION_ERRORS "Connection Errors (%)"
 END
 
 STRINGTABLE 
