Implemented scaling of graph lines using a multiplier
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5729 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -752,10 +752,10 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,190,22,50,14
 END
 
-IDD_GRAPH_ITEM DIALOG  0, 0, 247, 129
+IDD_GRAPH_ITEM DIALOGEX 0, 0, 247, 129
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Graph Item Properties"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,190,5,50,14,WS_DISABLED
     PUSHBUTTON      "Cancel",IDCANCEL,190,22,50,14
@@ -763,9 +763,8 @@ BEGIN
     COMBOBOX        IDC_GRAPH_SOURCE,15,20,160,175,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_GRAPH_PARAM,85,40,90,120,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Parameter:",IDC_STATIC,15,40,65,12,SS_CENTERIMAGE
+    LTEXT           "Multiplier:",IDC_STATIC,15,40,65,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_GRAPH_PARAM,85,41,89,14,ES_AUTOHSCROLL
     LTEXT           "Units:",IDC_STATIC,15,60,65,12,SS_CENTERIMAGE
     EDITTEXT        IDC_GRAPH_UNITS,85,60,90,12,ES_AUTOHSCROLL | ES_READONLY
     GROUPBOX        "&Display:",IDC_STATIC,5,85,180,40
