Fixed some x64 warnings.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5771 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.vcproj
+++ b/shareaza/Shareaza.vcproj
@@ -279,7 +279,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Wall"
 				Optimization="3"
-				GlobalOptimizations="TRUE"
+				GlobalOptimizations="FALSE"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="TRUE"
 				FavorSizeOrSpeed="1"
