Disabled SmallerTypeCheck because currently it cause problems.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5821 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.vcproj
+++ b/shareaza/Shareaza.vcproj
@@ -29,7 +29,7 @@
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_SHAREAZA;ZLIB_WINAPI;SHAREAZA_USE_ASM"
 				StringPooling="TRUE"
 				BasicRuntimeChecks="3"
-				SmallerTypeCheck="TRUE"
+				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="1"
 				BufferSecurityCheck="TRUE"
 				EnableFunctionLevelLinking="TRUE"
@@ -201,7 +201,7 @@
 				PreprocessorDefinitions="_DEBUG;WIN32;WIN64;_WINDOWS;_SHAREAZA;ZLIB_WINAPI"
 				StringPooling="TRUE"
 				BasicRuntimeChecks="3"
-				SmallerTypeCheck="TRUE"
+				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="1"
 				BufferSecurityCheck="TRUE"
 				EnableFunctionLevelLinking="TRUE"
