Adjusted -tray and -nosplash command line parameters. Removed spash window from task bar.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5824 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1077,6 +1077,7 @@ END
 
 IDD_SPLASH DIALOGEX 0, 0, 292, 39
 STYLE DS_SETFONT | WS_POPUP | WS_CLIPCHILDREN
+EXSTYLE WS_EX_TOOLWINDOW
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
 END
